# book_it

./: .coveragerc  .env  .pylintrc  README.md  exit  pyproject.toml  requirements.txt  sql_app.db
.docker/: docker-compose.yml
.docker/fast_api/: Dockerfile
app/core/: auth.py  main.py  settings.py
app/tests/: base_test.py
app/tests/core/: test_main.py
src/app/: __init__.py  main.py
src/auth/: service.py
src/auth/routers/v1/: router.py
src/base_app/: main.py  models.py
src/calendars/: __init__.py  main.py
src/calendars/crud/: __init__.py  availability.py  calendar.py  event.py
src/calendars/models/: __init__.py  availability.py  calendar.py  event.py
src/calendars/routes/v1/: __init__.py  availabilities.py  calendars.py  events.py
src/calendars/schemas/: __init__.py  availability.py  calendar.py  event.py
src/customers/: crud.py  main.py  models.py  schemas.py
src/customers/adapters/: users.py
src/customers/routers/v1/: router.py
src/db/: database.py
src/libs/: gcs.py
src/places/: crud.py  main.py  models.py  schemas.py
src/places/routers/v1/: router.py
src/professionals/: crud.py  main.py  models.py  schemas.py
src/professionals/routers/v1/: router.py
src/schedules/: crud.py  main.py  models.py  schemas.py
src/schedules/routers/v1/: router.py
src/users/: crud.py  models.py  schemas.py  service.py
src/users/routers/v1/: router.py
zeek/: local-http-config.zeek  local.zeek  local.zeek.backup
zeek/share/zeek/policy/protocols/http/: __load__.zeek  entities.zeek  headers.zeek  mime.types  redefs.zeek
