[tool.poetry]
name = "book-it"
version = "0.0.0"
description = ""
authors = ["garusocruz <garusotec@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "book_it"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
